# Akamai-assignment

batcher_service/: go.mod  main.go  server.go
batcher_service/batcher/: batcher.go
batcher_service/payload/: predict.go
prediction_api/: Dockerfile  README.md  main.py  pyproject.toml
